--- a/eslint-prettire/.eslintrc
+++ b/eslint-prettire/.eslintrc
@@ -6,7 +6,8 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "prettier"
     ],
     "overrides": [
     ],
@@ -32,7 +33,7 @@
         ],
         "semi": [
             "error",
-            "always"
+            "never"
         ]
     }
 }
